# Mase_EDGE

./: .gitattributes  .gitignore  .gitmodules  EDGE_NAS_Search.ipynb  EDGE_optuna_study.ipynb  Param_and_Deploy_Pipeline_Loop.ipynb  README.md  gradle.properties  pyproject.toml  requirements.txt  settings.gradle.kts
EDGE_device/: device_specifications.json  device_specifications.py  edge_adb_helpers.py  resnet_onnx_weights.py
app/: build.gradle.kts
app/src/androidTest/java/com/example/adlsproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/adlsproject/: FirstFragment.kt  MainActivity.kt  ModelDownloader.kt  SecondFragment.kt  Tokenizer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/example/adlsproject/: ExampleUnitTest.kt
debug_scripts/: debug_single_pte_android.py
edge_study/: __init__.py  adb_benchmark.py  export_pte.py  host_eval.py  metrics_json.py  model_loaders.py  objective.py  optuna_search.py  prune_optimize.py  quant_xnnpack.py  settings.py
gradle/wrapper/: gradle-wrapper.properties
python notebooks/: EDGE_optuna_study.ipynb  MobileNetV3.ipynb  ResNet18.ipynb
scripts/: debug_single_pte_android.py  normalize_notebook_metadata.py
studies-optuna/: results-xnnpack-pruning-quant-dev-eval.txt
tiny_imagenet_lib/: __init__.py  evaluate.py  quant_configs.py
unit_test/: conftest.py  requirements.txt  test_edge_pipeline.py  test_mobilenet_v3.py  test_resnet18.py
